feat/003: edit sitebar

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Client Deck</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
+    <title>React English</title>
+    <link rel="icon" href="./logo.ico" type="image/x-icon"/>
 </head>
 <body>
 <div id="root"></div>
